--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Pycharm
+.idea/
+
+# Virtualenv
+venv/
 
 # Training dataset
 data/test.csv
 data/train.csv
 
-
 # GloVe
 glove/glove.*.txt
 glove/glove.*.zip
-
